# Crehana-API

./: .flake8  .gitignore  .pre-commit-config.yaml  DECISION_LOG.md  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
alembic/: env.py
configs/: __init__.py  config_base.py  config_dev_mysql.py  config_dev_postgres.py  config_prod_mysql.py  config_prod_postgres.py
docker/: Dockerfile  docker-compose.yml  start-dev.bat  start-dev.sh
scripts/: lint.py  run_tests.py
src/: main.py
src/api/dependencies/: DI.py  jwt.py
src/api/modules/auth/: router.py  schema.py
src/api/modules/list_tasks/: router.py  schema.py
src/api/modules/tasks/: router.py  schema.py
src/application/enums/: task_enums.py
src/application/responses/: api_responses.py
src/application/services/: auth_service.py  list_task_service.py  task_service.py
src/domain/exceptions/: common_exceptions.py
src/domain/interfaces/: auth_interface.py  list_task_interface.py  task_interface.py
src/domain/models/: list_task.py  task.py  user.py
src/infrastructure/data/: db.py  db_methods.py
src/infrastructure/docs/: swagger_config.py
src/infrastructure/repositories/postgresql/: auth_repository.py  list_task_repository.py  task_repository.py
src/infrastructure/services/resend/: resend_service.py
tests/: README.md  conftest.py
tests/integration/: test_auth_endpoints.py  test_list_task_endpoints.py  test_task_endpoints.py
tests/unit/: test_auth_service.py  test_list_task_service.py  test_password_hasher.py  test_resend_service.py  test_task_service.py
